implementing add movie function

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           name="filme"
           placeholder="Insira endereço de imagem"
         />
-        <button onClick="adicionarFilme()">Adicionar Filme</button>
+        <button onClick="addMovie()">Adicionar Filme</button>
       </div>
     </div>
     <div id="listaFilmes"></div>
